async-coap-uri/proc-macros/tests/ui/assert_uri_literal/escaped_ascii_control.stderr
error: ascii control chars are forbidden for security reasons
 --> $DIR/escaped_ascii_control.rs:7:25
  |
7 |     assert_uri_literal!("https://www.example.com/a/%00/c");
  |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
